using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class AnimationStrings : MonoBehaviour
{
    internal static string Horizontal = "Horizontal";
    internal static string Vertical = "Vertical";
    internal static string MoveX = "MoveX";
    internal static string MoveY=  "MoveY";
    internal static string Attack= "Attack";
    internal static string CheckAttack= "CheckAttack";
    internal static string SlashPerTime= "SlashPerTime";
    internal static string isAlive = "isAlive";
    internal static string Fire = "Fire";

}
